# notion-emojifier

./: .cruft.json  .gitignore  README.md  pyproject.toml
.github/: check_lint  format  lint
.github/workflows/: lint.yml  test.yml
notion_emojifier/: __init__.py  main.py
notion_emojifier/notion_helpers/: __init__.py  databases.py  pages.py  schemas.py
notion_emojifier/openai_helpers/: __init__.py  suggester.py
